--- a/server/tests/drivers/google/fixtures/test_0001_can_create_a_new_bucket.yml
+++ b/server/tests/drivers/google/fixtures/test_0001_can_create_a_new_bucket.yml
@@ -6,31 +6,31 @@ http_interactions:
     body: 
       string: ""
     headers: 
-      Date: 
-      - Thu, 31 May 2012 13:32:24 +0000
       Authorization: 
-      - GOOG1 GOOGUM2I5ZVSPSV5H42U:6unA1LH/B3dvANciEogxxgUDGOE=
+      - GOOG1 GOOGXKQLYTEOZTILUBZ5:M4K9MWPskNvOyouLnfg2TrwVW4M=
+      Date: 
+      - Thu, 28 Jun 2012 13:51:51 +0000
   response: 
     status: 
       code: 200
       message: 
     headers: 
-      Pragma: 
-      - no-cache
-      Date: 
-      - Thu, 31 May 2012 13:32:26 GMT
+      Content-Length: 
+      - "0"
       Server: 
-      - HTTP Upload Server Built on May 23 2012 15:51:04 (1337813464)
+      - HTTP Upload Server Built on Jun 14 2012 02:12:09 (1339665129)
       Expires: 
       - Fri, 01 Jan 1990 00:00:00 GMT
       Content-Type: 
-      - text/html
-      Content-Length: 
-      - "0"
+      - text/html; charset=UTF-8
+      Pragma: 
+      - no-cache
+      Date: 
+      - Thu, 28 Jun 2012 13:51:52 GMT
       Cache-Control: 
       - no-cache, no-store, must-revalidate
     body: 
       string: ""
     http_version: 
-  recorded_at: Thu, 31 May 2012 13:32:26 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Thu, 28 Jun 2012 13:51:52 GMT
+recorded_with: VCR 2.2.2
