--- a/server/tests/drivers/google/fixtures/test_0008_can_delete_bucket.yml
+++ b/server/tests/drivers/google/fixtures/test_0008_can_delete_bucket.yml
@@ -6,27 +6,27 @@ http_interactions:
     body: 
       string: ""
     headers: 
-      Date: 
-      - Thu, 31 May 2012 13:32:38 +0000
       Authorization: 
-      - GOOG1 GOOGUM2I5ZVSPSV5H42U:qqVLMZLqoFyshuSiXMwTO1vUxgc=
+      - GOOG1 GOOGXKQLYTEOZTILUBZ5:fP5JoD+ItmgUWZ9uXYkiKn6SoGk=
+      Date: 
+      - Thu, 28 Jun 2012 13:52:00 +0000
   response: 
     status: 
       code: 204
       message: 
     headers: 
-      Date: 
-      - Thu, 31 May 2012 13:32:40 GMT
-      Server: 
-      - HTTP Upload Server Built on May 23 2012 15:51:04 (1337813464)
-      Expires: 
-      - Thu, 31 May 2012 13:32:40 GMT
       Content-Length: 
       - "0"
+      Server: 
+      - HTTP Upload Server Built on Jun 14 2012 02:12:09 (1339665129)
+      Expires: 
+      - Thu, 28 Jun 2012 13:52:02 GMT
+      Date: 
+      - Thu, 28 Jun 2012 13:52:02 GMT
       Cache-Control: 
       - private, max-age=0
     body: 
       string: ""
     http_version: 
-  recorded_at: Thu, 31 May 2012 13:32:40 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Thu, 28 Jun 2012 13:52:02 GMT
+recorded_with: VCR 2.2.2
