--- a/server/config/drivers/fgcp.yaml
+++ b/server/config/drivers/fgcp.yaml
@@ -1,13 +1,14 @@
 ---
 :fgcp:
   :name: FGCP
-  :username: Username
+  :username: Folder name containing User Certificate
   :password: Secret Key Password of User Certificate
   :entrypoints:
     default:
-      jp: https://api.oviss.jp.fujitsu.com/ovissapi/endpoint
+      jp-east: https://api.oviss.jp.fujitsu.com/ovissapi/endpoint
       au: https://api.globalcloud.fujitsu.com.au/ovissapi/endpoint
       sg: https://api.globalcloud.sg.fujitsu.com/ovissapi/endpoint
       uk: https://api.globalcloud.uk.fujitsu.com/ovissapi/endpoint
       us: https://api.globalcloud.us.fujitsu.com/ovissapi/endpoint
       de: https://api.globalcloud.de.fujitsu.com/ovissapi/endpoint
+      jp-west: https://api.oviss2.jp.fujitsu.com/ovissapi/endpoint
