Core: Removed obsoleted development dependencies from Gemfile

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -3,14 +3,8 @@ source "http://rubygems.org"
 gemspec
 
 group :development do
-  gem "compass", ">= 0.8.17"
-  gem "vcr"
-  gem "webmock"
-  gem "rack-test", ">= 0.5.3"
-  gem "ci_reporter"
-  gem "cucumber", ">= 0.6.3"
-  gem "rspec", ">= 2.0.0"
+  gem "rack-test"
   gem "minitest"
-  gem "timecop"
+  gem "simplecov"
 end
 
