--- a/server/Rakefile
+++ b/server/Rakefile
@@ -109,10 +109,12 @@ task :routes do
 end
 
 Rake::TestTask.new do |t|
+  t.ruby_opts << '-r./tests/test_helper.rb'   # Load SimpleCov when COVERAGE=1 is set
   t.test_files = FileList[
-    'tests/helpers/**/*test.rb',      # Deltacloud extensions (core_ext) and other helpers
-    'tests/drivers/base/*test.rb',    # Deltacloud drivers API tests
-    'tests/drivers/models/*test.rb',  # Deltacloud models tests
-    'tests/deltacloud/*test.rb'       # Deltacloud internal API tests
+    'tests/helpers/**/*test.rb',              # Deltacloud extensions (core_ext) and other helpers
+    'tests/drivers/base/*test.rb',            # Deltacloud drivers API tests
+    'tests/drivers/models/*test.rb',          # Deltacloud models tests
+    'tests/deltacloud/*test.rb',              # Deltacloud internal API tests
+    'tests/deltacloud/collections/*test.rb'   # Deltacloud collections
   ]
 end
