--- a/server/Rakefile
+++ b/server/Rakefile
@@ -110,6 +110,9 @@ end
 
 Rake::TestTask.new do |t|
   t.ruby_opts << '-r./tests/test_helper.rb'   # Load SimpleCov when COVERAGE=1 is set
+  unless RUBY_VERSION < '1.9.0'
+    t.loader = :testrb
+  end
   t.test_files = FileList[
     'tests/helpers/**/*test.rb',              # Deltacloud extensions (core_ext) and other helpers
     'tests/drivers/base/*test.rb',            # Deltacloud drivers API tests
