--- a/tests/Rakefile
+++ b/tests/Rakefile
@@ -20,5 +20,6 @@ namespace :test do
   desc "Run tests for the Deltacloud API frontend."
   Rake::TestTask.new(:deltacloud) do |t|
     t.test_files = FileList["deltacloud/*_test.rb"]
+    t.options = "-v"
   end
 end
